Implementing gatsby-background-image & fixing vertical spacing on home

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -829,7 +829,7 @@ $navbar-dark-disabled-color:        rgba($light, .45) !default;
 
 // // Jumbotron
 
-// $jumbotron-padding:                 2rem !default;
+$jumbotron-padding:                 0 !default;
 // $jumbotron-color:                   null !default;
 // $jumbotron-bg:                      $gray-200 !default;
 
